// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setLoading 1`] = `
Object {
  "address": "",
  "displayableMessageLimit": 50,
  "id": null,
  "isSizeCheckingInProgress": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "members": null,
  "message": Object {},
  "messageSizeStatus": null,
  "shareableUri": "",
  "showInfoMsg": true,
  "spentFilterValue": "0",
}
`;

exports[`channel reducer handles actions - setLoadingMessage 1`] = `
Object {
  "address": "",
  "displayableMessageLimit": 50,
  "id": null,
  "isSizeCheckingInProgress": false,
  "loader": Object {
    "loading": false,
    "message": "this is a loading message",
  },
  "members": null,
  "message": Object {},
  "messageSizeStatus": null,
  "shareableUri": "",
  "showInfoMsg": true,
  "spentFilterValue": "0",
}
`;

exports[`channel reducer handles actions - setShareableUri 1`] = `
Object {
  "address": "",
  "displayableMessageLimit": 50,
  "id": null,
  "isSizeCheckingInProgress": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "members": null,
  "message": Object {},
  "messageSizeStatus": null,
  "shareableUri": "zbay://channel/this-is-a-hash",
  "showInfoMsg": true,
  "spentFilterValue": "0",
}
`;
